[workspace]

[package]
name = "mws"
version = "0.1.0"
edition = "2024"
authors = ["tas0dev <github@tas0dev>", "mochiOS contributors"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
quick-xml = "0.41.0"
chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"